# chat-app

./: README.md
back-end/: .env.example  Cargo.toml  compose.yml  sqitch.conf  sqitch.plan
back-end/.sqlx/: query-9be4cfdb625be552b54f86f0a95b92c3a0c1e8bcb85c8fb6c30271f1ccac946f.json
back-end/db/deploy/: refresh_tokens_table.sql  rooms_table.sql  users_table.sql
back-end/db/revert/: refresh_tokens_table.sql  rooms_table.sql  users_table.sql
back-end/db/verify/: refresh_tokens_table.sql  rooms_table.sql  users_table.sql
back-end/src/: api.rs  main.rs
back-end/src/api/: handlers.rs  middlewares.rs  models.rs  routes.rs  services.rs  utils.rs
back-end/src/api/handlers/: auth_handlers.rs  rooms_handlers.rs
back-end/src/api/middlewares/: logged_in_middleware.rs
back-end/src/api/models/: auth_models.rs  cookie_models.rs  jwt_models.rs
back-end/src/api/routes/: auth_routes.rs  rooms_routes.rs
back-end/src/api/services/: auth_services.rs  cookies_service.rs  jwt_services.rs
back-end/src/api/utils/: api_errors.rs  consts.rs
