[package]
name = "back-end"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
actix-cors = "0.7.1"
serde = "1.0.219"
thiserror = "2.0.12"
chrono = { version = "0.4", features = ["serde"] }
time = "0.3.41"
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4","serde"] }
bcrypt = "0.17.0"
actix = "0.13.5"
dotenv = "0.15.0"
sqlx = { version = "0.8.6", features = ["runtime-async-std-native-tls","macros", "postgres", "ipnetwork", "chrono","uuid"] }
futures-util = "0.3.31"